--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 						</a>
 						<ul class="dropdown-menu projetos00">
 						  <li><a class="dropdown-item text-white itemMenu00" href="#cartas">Cartas</a></li>
+						  <li><a class="dropdown-item text-white itemMenu00" href="#facul1">Faculdade</a></li>
+						  <li><a class="dropdown-item text-white itemMenu00" href="#blsk1">BLSK</a></li>
+						  <li><a class="dropdown-item text-white itemMenu00" href="#lancer1">Lancer</a></li>
 						  <li><a class="dropdown-item text-white itemMenu00" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">Vázio</a></li>
 						</ul>
 					</li>
@@ -55,7 +58,7 @@
 			<!-- Cards - Último card: Card 009 -->
 			<article class="artigo1">
 				<br id="cartas">
-				<div class="row row-cols-1 row-cols-md-6 g-4">
+				<div class="row row-cols-1 row-cols-md-3 g-4">
 					<!-- Card 001 -->
 					<div id="facul1" class="col">
 						<div class="card h-100 video00">
@@ -151,7 +154,7 @@
 					  </div>
 					<!-- Fim Card -->
 					<!-- Card 007 -->
-					<div id="card007" class="col">
+					<div id="blsk1" class="col">
 						<div class="card h-100 video00">
 						  <div class="card-body">
 							<h1 class="card-subtitle text-light">BLSK</h1>
@@ -228,9 +231,9 @@
 								e autoconfiança. Juntos, esses elementos criam uma rotina equilibrada que promove saúde física e mental. Adotar esse estilo de vida traz benefícios duradouros, 
 								ajudando a manter energia e vitalidade no dia a dia.
 							</p> <hr>
-								<div id="carousel1" class="carousel slide" data-bs-wrap="false">
+								<div id="carousel1" class="carousel slide" data-bs-wrap="true">
 									<div class="carousel-inner">
-									  <div class="carousel-item active">
+									  <div class="carousel-item">
 										<img src="assets/img/carousel/blsk/01.jpg" class="d-block w-100" alt="...">
 									  </div>
 									  <div class="carousel-item">
@@ -239,7 +242,7 @@
 									  <div class="carousel-item">
 										<img src="assets/img/carousel/blsk/03.jpg" class="d-block w-100" alt="...">
 									  </div>
-									  <div class="carousel-item">
+									  <div class="carousel-item active">
 										<img src="assets/img/carousel/01.jpg" class="d-block w-100" alt="...">
 										<div class="carousel-caption d-none d-md-block">
 										  <h5>First slide label</h5>
@@ -270,12 +273,12 @@
 									  <span class="visually-hidden">Next</span>
 									</button>
 									<div class="carousel-indicators">
-										<button type="button" data-bs-target="#carousel1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"><img src="assets/img/carousel/blsk/01.jpg"></button>
+										<button type="button" data-bs-target="#carousel1" data-bs-slide-to="0" aria-label="Slide 1"><img src="assets/img/carousel/blsk/01.jpg"></button>
 										<button type="button" data-bs-target="#carousel1" data-bs-slide-to="1" aria-label="Slide 2"><img src="assets/img/carousel/blsk/02.jpg"></button>
 										<button type="button" data-bs-target="#carousel1" data-bs-slide-to="2" aria-label="Slide 3"><img src="assets/img/carousel/blsk/03.jpg"></button>
-										<button type="button" data-bs-target="#carousel1" data-bs-slide-to="3" aria-label="Slide 4"><img src="assets/img/carousel/01.jpg"></button>
-										<button type="button" data-bs-target="#carousel1" data-bs-slide-to="4" aria-label="Slide 5"><img src="assets/img/carousel/02.jpg"></button>
-										<button type="button" data-bs-target="#carousel1" data-bs-slide-to="5" aria-label="Slide 6"><img src="assets/img/carousel/03.jpg"></button>
+										<button type="button" data-bs-target="#carousel1" data-bs-slide-to="3" class="active" aria-current="true" aria-label="Slide 4"></button>
+										<button type="button" data-bs-target="#carousel1" data-bs-slide-to="4" aria-label="Slide 5"></button>
+										<button type="button" data-bs-target="#carousel1" data-bs-slide-to="5" aria-label="Slide 6"></button>
 									</div>
 								</div> <br> <br>
 								<p class="texto04">
@@ -1237,7 +1240,7 @@
 					  </div> 
 					<!-- Fim Card -->
 					<!-- Card 011 -->
-					<div class="col">
+					<div id="lancer1" class="col">
 						<div class="card h-100 video00">
 						  <div class="card-body">
 							<h1 class="card-subtitle text-light">Lancer</h1>
