--- a/index.html
+++ b/index.html
@@ -25,19 +25,22 @@
 							<i class="bi bi-building-gear icon1 fs-1"></i> Projetos
 						</a>
 						<ul class="dropdown-menu projetos00">
-						  <li><a class="dropdown-item text-white itemMenu00" href="#cartas">Cartas</a></li>
-						  <li><a class="dropdown-item text-white itemMenu00" href="#facul1">Faculdade</a></li>
-						  <li><a class="dropdown-item text-white itemMenu00" href="#blsk1">BLSK</a></li>
-						  <li><a class="dropdown-item text-white itemMenu00" href="#lancer1">Lancer</a></li>
-						  <li><a class="dropdown-item text-white itemMenu00" href="#am1">AM</a></li>
-						  <li><a class="dropdown-item text-white itemMenu00" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">Vázio</a></li>
+						  <li><a class="dropdown-item text-white itemMenu00" href="#facul1">01 - Faculdade</a></li>
+						  <li><a class="dropdown-item text-white itemMenu00" href="#blsk1">02 - BLSK</a></li>
+						  <li><a class="dropdown-item text-white itemMenu00" href="#gti1">03 - GTI</a></li>
+						  <li><a class="dropdown-item text-white itemMenu00" href="#ing1">04 - Inglês</a></li>
+						  <li><a class="dropdown-item text-white itemMenu00" href="#dig1">05 - Digitação</a></li>
+						  <li><a class="dropdown-item text-white itemMenu00" href="#out1">06 - Outros</a></li>
+						  <li><a class="dropdown-item text-white itemMenu00" href="#poe1">07 - Poesias</a></li>
+						  <li><a class="dropdown-item text-white itemMenu00" href="#dia1">08 - Diário</a></li>
+						  <li><a class="dropdown-item text-white itemMenu00" href="#tex1">09 - Texto</a></li>
+						  <li><a class="dropdown-item text-white itemMenu00" href="#kon1">10 - Konga</a></li>
+						  <li><a class="dropdown-item text-white itemMenu00" href="#lan1">11 - Lancer</a></li>
+						  <li><a class="dropdown-item text-white itemMenu00" href="#am1">12 - AM</a></li>
 						</ul>
 					</li>
 					<li class="nav-item itemMenu01">
 						<a class="nav-link text-white" aria-current="page" href="index.html"><i class="bi bi-house icon1 fs-1"></i> Home</a>
-					</li>
-					<li class="nav-item itemMenu00">
-						<a class="nav-link text-white" href="teste.html"><i class="bi bi-file-earmark-person icon1 fs-1"></i> Teste</a>
 					</li>
 				  </ul>
 				</div>
@@ -53,7 +56,7 @@
 			<h1>ETH</h1>
 			<!-- Cards - Último card: Card 009 -->
 			<article class="artigo1">
-				<br id="cartas">
+				<br>
 				<div class="row row-cols-1 row-cols-md-3 g-4">
 					<!-- Card 001 -->
 					<div id="facul1" class="col">
@@ -75,6 +78,8 @@
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal01">Links</button>
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal02">Info</button>
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal03">Notas</button>
+							  <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							  <a type="button" class="btn btn-outline-light" href="#blsk1">🔻</a>
 							</p>                   
 						  </div>
 						</div>
@@ -169,6 +174,8 @@
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c7l1">Links</button>
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c7l2">Info</button>
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c7l3">Notas</button>
+							  <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							  <a type="button" class="btn btn-outline-light" href="#gti1">🔻</a>
 							</p>                   
 						  </div>
 						</div>
@@ -332,7 +339,7 @@
 					  </div> 
 					<!-- Fim Card -->
 					<!-- Card 008 -->
-					<div id="card008" class="col">
+					<div id="gti1" class="col">
 						<div class="card h-100 video00">
 						  <div class="card-body">
 							<h1 class="card-subtitle text-light">GTI</h1>
@@ -351,6 +358,8 @@
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c8l1">Links</button>
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c8l2">Info</button>
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c8l3">Notas</button>
+							  <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							  <a type="button" class="btn btn-outline-light" href="#ing1">🔻</a>
 							</p>                   
 						  </div>
 						</div>
@@ -434,7 +443,7 @@
 					  </div> 
 					<!-- Fim Card -->
 					<!-- Card 009 -->
-					<div id="ingles1" class="col">
+					<div id="ing1" class="col">
 						<div class="card h-100 video00">
 						  <div class="card-body">
 							<h1 class="card-subtitle text-light">Inglês</h1>
@@ -453,6 +462,8 @@
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c9l1">Links</button>
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c9l2">Info</button>
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c9l3">Notas</button>
+							  <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							  <a type="button" class="btn btn-outline-light" href="#dig1">🔻</a>
 							</p>                   
 						  </div>
 						</div>
@@ -525,7 +536,7 @@
 					  </div> 
 					<!-- Fim Card -->		
 				  <!-- Card 006 -->
-					<div id="digit1" class="col">
+					<div id="dig1" class="col">
 						<div class="card h-100 video00">
 						  <div class="card-body">
 							<h1 class="card-subtitle text-light">Digitação</h1>
@@ -544,6 +555,8 @@
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c6l1">Links</button>
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c6l2">Info</button>
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c6l3">Notas</button>
+							  <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							  <a type="button" class="btn btn-outline-light" href="#out1">🔻</a>
 							</p>                   
 						  </div>
 						</div>
@@ -611,7 +624,7 @@
 					  </div> 
 					<!-- Fim Card -->
 				   <!-- Card 002 -->
-				  <div class="col">
+				  <div id="out1" class="col">
 					<div class="card h-100 video00">
 					  <div class="card-body">
 						<h1 class="card-subtitle text-light">Outros</h1>
@@ -630,6 +643,8 @@
 						  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal06">Links</button>
 						  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal05">Info</button>
 						  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal04">Notas</button>
+						  <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+						  <a type="button" class="btn btn-outline-light" href="#poe1">🔻</a>
 						</p>                   
 					  </div>
 					</div>
@@ -734,7 +749,7 @@
 				  </div>
 				  <!-- Fim Card -->
 				   <!-- Card 003 -->
-				  <div class="col">
+				  <div id="poe1" class="col">
 					<div class="card h-100 video00">
 					  <div class="card-body">
 						<h1 class="card-subtitle text-light">Poesias</h1>
@@ -754,6 +769,8 @@
 						  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal09">Links</button>
 						  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal08">Info</button>
 						  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal07">Notas</button>
+						  <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+						  <a type="button" class="btn btn-outline-light" href="#dia1">🔻</a>
 						</p>                   
 					  </div>
 					</div>
@@ -855,7 +872,7 @@
 				  </div>
 				  	<!-- Fim Card -->
 					<!-- Card 004 -->
-					<div class="col">
+					<div id="dia1" class="col">
 						<div class="card h-100 video00">
 						<div class="card-body">
 							<h1 class="card-subtitle text-light">Diário ETH</h1>
@@ -875,6 +892,8 @@
 							<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c4l1">Links</button>
 							<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c4l2">Info</button>
 							<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c4l3">Notas</button>
+							<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							<a type="button" class="btn btn-outline-light" href="#tex1">🔻</a>
 							</p>                   
 						</div>
 						</div>
@@ -970,7 +989,7 @@
 					</div>
 					<!-- Fim Card -->
 					<!-- Card 005 -->
-					 <div class="col">
+					 <div id="tex1" class="col">
 						<div class="card h-100 video00">
 						  <div class="card-body">
 							<h1 class="card-subtitle text-light">Texto</h1>
@@ -989,6 +1008,8 @@
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c5l1">Links</button>
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c5l2">Info</button>
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c5l3">Notas</button>
+							  <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							  <a type="button" class="btn btn-outline-light" href="#kon1">🔻</a>
 							</p>                   
 						  </div>
 						</div>
@@ -1062,7 +1083,7 @@
 					  </div> 
 					<!-- Fim Card -->
 					<!-- Card 010 -->
-					<div class="col">
+					<div id="kon1" class="col">
 						<div class="card h-100 video00">
 						  <div class="card-body">
 							<h1 class="card-subtitle text-light">Konga</h1>
@@ -1081,6 +1102,8 @@
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c10l1">Links</button>
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c10l2">Info</button>
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c10l3">Notas</button>
+							  <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							  <a type="button" class="btn btn-outline-light" href="#lan1">🔻</a>
 							</p>                   
 						  </div>
 						</div>
@@ -1236,7 +1259,7 @@
 					  </div> 
 					<!-- Fim Card -->
 					<!-- Card 011 -->
-					<div id="lancer1" class="col">
+					<div id="lan1" class="col">
 						<div class="card h-100 video00">
 						  <div class="card-body">
 							<h1 class="card-subtitle text-light">Lancer</h1>
@@ -1254,6 +1277,8 @@
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c11l1">Links</button>
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c11l2">Info</button>
 							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c11l3">Notas</button>
+							  <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							  <a type="button" class="btn btn-outline-light" href="#am1">🔻</a>
 							</p>                   
 						  </div>
 						</div>
@@ -1377,7 +1402,7 @@
 						  </div>
 						  <div class="card-footer">
 							<p class="texto04">
-								<a type="button" class="btn btn-outline-light" href="#lancer1">🔺</a>
+								<a type="button" class="btn btn-outline-light" href="#lan1">🔺</a>
 								<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c12l1">Links</button>
 								<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c12l3">Notas</button>
 								<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
@@ -1540,22 +1565,4 @@
 	<script src="assets/js/loading.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-	  <div class="modal-content modal2">
-		<div class="modal-header modal1">
-		  <h1 class="modal-title fs-5 texto06" id="exampleModalLabel">Aviso</h1>
-		  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-		</div>
-		<div class="modal-body modal1">
-			<p class="texto06">
-				Atualmente, esta seção da página está em desenvolvimento e ainda não está disponível. Agradecemos a sua paciência e compreensão enquanto trabalhamos para aprimorá-la.
-			</p>
-		</div>
-		<div class="modal-footer modal1">
-		  <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fechar</button>
-		</div>
-	  </div>
-	</div>
-  </div>
 </html>
