--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						</ul>
 					</li>
 					<li class="nav-item itemMenu01">
-						<a class="nav-link text-white" aria-current="page" href="index.html"><i class="bi bi-house icon1 fs-1"></i> Home</a>
+						<a class="nav-link text-white" aria-current="page" href="#" onclick="location.reload();"><i class="bi bi-house icon1 fs-1"></i> Home</a>
 					</li>
 				  </ul>
 				</div>
