--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 			<!-- Cards - Último card: Card 009 -->
 			<article class="artigo1">
 				<br>
-				<div class="row row-cols-1 row-cols-md-2 g-4">
+				<div class="row row-cols-1 row-cols-md-2 g-1">
 					<!-- Card 001 -->
 					<div id="facul1" class="col">
 						<div class="card h-100 video00">
-						  <div class="card-body">
+						  <div class="card-body p-0">
 							<h1 class="card-subtitle text-light">Faculdade</h1>
 							<p class="card-text text-warning">Ciência da Computação.</p>
 							<img class="img02" src="assets/img/c10.jpg"> <br> <br>
@@ -75,12 +75,10 @@
 						  </div>
 						  <div class="card-footer">
 							<p class="texto04">
-								<a type="button" class="btn btn-outline-light" href="#topo">🔺</a>
-							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal01">Links</button>
-							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal02">Info</button>
-							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal03">Notas</button>
-							  	<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
-							  	<a type="button" class="btn btn-outline-light" href="#blsk1">🔻</a>
+								<a type="button" class="btn btn-outline-light" href="#topo"><i class="bi bi-arrow-up texto01"></i></a>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal03"><i class="bi bi-card-text"></i></button>
+							  	<a type="button" class="btn btn-outline-light" href="#topo"><i class="bi bi-list"></i></a>
+							  	<a type="button" class="btn btn-outline-light" href="#blsk1"><i class="bi bi-arrow-down texto01"></i></a>
 							</p>                   
 						  </div>
 						</div>
