--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 							<img class="img02" src="assets/img/c10.jpg"> <br> <br>
 							<p class="texto04">
 								<img align="left" class="img01" src="assets/img/p07.jpg">
-								A faculdade de Ciências da Computação oferece uma formação sólida e abrangente no mundo da tecnologia e programação. Durante o curso, os alunos exploram áreas fundamentais 
-								como algoritmos, estruturas de dados e arquitetura de computadores, além de se aprofundarem em linguagens de programação e desenvolvimento de software. Este conhecimento 
-								é crucial para a criação de soluções inovadoras e eficientes, preparando os estudantes para enfrentar os desafios tecnológicos do futuro. Além das disciplinas técnicas, a 
-								faculdade também promove o desenvolvimento de habilidades críticas (...)
+								A faculdade de Ciências da Computação oferece uma formação sólida e abrangente no mundo da tecnologia e programação. 
+								Durante o curso, os alunos exploram áreas fundamentais como algoritmos, estruturas de dados e arquitetura de 
+								computadores, além de se aprofundarem em linguagens de programação e desenvolvimento de software. Este conhecimento 
+								é crucial para a criação de soluções inovadoras e eficientes, preparando os estudantes para enfrentar...
 							  </p>
 						  </div>
-						  <div class="card-footer">
+						  <div class="card-footer p-0">
 							<p class="texto04">
 								<a type="button" class="btn btn-outline-light" href="#topo"><i class="bi bi-arrow-up texto01"></i></a>
 							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal03"><i class="bi bi-card-text"></i></button>
@@ -134,9 +134,7 @@
 								15 de outubro de 2024: Estudar espaços vetoriais.
 							</p> <hr>
 							<p class="texto04">
-								A faculdade de Ciências da Computação oferece uma formação sólida e abrangente no mundo da tecnologia e programação. Durante o curso, os alunos exploram áreas fundamentais 
-								como algoritmos, estruturas de dados e arquitetura de computadores, além de se aprofundarem em linguagens de programação e desenvolvimento de software. Este conhecimento 
-								é crucial para a criação de soluções inovadoras e eficientes, preparando os estudantes para enfrentar os desafios tecnológicos do futuro. <br> <br>
+								...os desafios tecnológicos do futuro. <br> <br>
 								Além das disciplinas técnicas, a faculdade também promove o desenvolvimento de habilidades críticas, como a resolução de problemas e o trabalho em equipe. Os projetos práticos 
 								e as experiências acadêmicas proporcionam uma visão realista do mercado de trabalho e preparam os alunos para uma carreira dinâmica e em constante evolução. A integração com o 
 								setor industrial e as oportunidades de estágio ajudam a conectar a teoria com a prática, oferecendo uma preparação valiosa para o mundo profissional. <br> <br>
