--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
 					<div class="card h-100 video00">
 					  <div class="card-body p-0">
 						<h1 class="card-subtitle text-light">Poesias</h1>
-						<p class="card-text text-warning">O pensamento vaga por entre as estrelas, Onde...</p>
+						<p class="card-text text-warning">Ana com A.</p>
 						<img class="img02" src="assets/img/c03.jpg"> <br> <br>
 						<p class="texto04">
 							<img align="left" class="img01" src="assets/img/p03.jpg">
@@ -598,7 +598,8 @@
 							que passa, quando sinto com todas as minhas forças que estou com A pessoa, não a certa ou a errada, mas simplesmente A pessoa que faz o meu coração errar cada batida apenas 
 							com um olhar Só ele tem tem esse olhar, só ele tem esse cheiro que me deixa inebriada Mas além de tudo isso, só ele têm a capacidade de ser gentil, carinhoso e real sem me deixar 
 							desconfiada Só ele me faz ser a mulher mais feliz do mundo todas as manhãs, tardes e madrugadas a cada dia que passa... <br> <br>
-							...o tempo se dissolve em poesia. E no silêncio da criação, o saber floresce, Como um enigma sussurrado pela eternidade.
+							O pensamento vaga por entre as estrelas, Onde o tempo se dissolve em poesia. E no silêncio da criação, o saber floresce, Como um enigma 
+							sussurrado pela eternidade.
 						</p>
 						<p class="texto04">
 							<a href="#" class="btn btn-light" target="_blank">Gravações 1</a>
